deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo
  namespace: default
  labels:
    app: web

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web

  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: web
    spec:
     containers:
     - name: todo
       image: 995105043624.dkr.ecr.eu-west-1.amazonaws.com/gika-container-repository:latest
      #  imagePullPolicy: IfNotPresent
       command: ["rails", "s"]
       ports:
       - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: default
  # annotations:
    #alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  selector:
    app: web
  type: NodePort
  ports:
    # - protocol: TCP
      # this service will expose this port
      - port: 8080
      # Port we're targeting on the pod container
        targetPort: 8080
