ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb
  labels:
    app: web
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip #instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:995105043624:certificate/0cf804ce-92f9-4223-bc5b-ef006e2e17ed
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/security-groups: sg-053f2aabff22b4cd2
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port #status-port  
spec:
  ingressClassName: alb   # Ingress Class                  
  rules:
    # - host: todo.gika.dev
    - http:
        paths:      
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo
                port: 
                  number: 8080
